--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.9",
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^18.2.9",
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
